--- a/src/styles/homepage.module.css
+++ b/src/styles/homepage.module.css
@@ -1,31 +1,87 @@
-.outer{
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: black;
+    font-family: "Ubuntu";
 }
-.options{
-    color:white;
+
+body,
+.container,
+.boxForm {
     display: flex;
-    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    background: rgb(204, 204, 255);
+}
+
+.container {
+    min-width: 25em;
+    padding: 1.2em;
+
+    border-radius: 20px;
+    background-color: rgb(34, 34, 34);
+}
+
+.boxForm {
+    min-width: 24em;
+    padding: 2.2em 1.1em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    border-radius: 10px;
+    background-color: rgb(238, 238, 255);
     flex-direction: column;
 }
-.option{
-    margin: 5vh;
-    border-radius: 10px;
-    height: 4em;
-    width: 10em;
+
+.heading {
+    padding-top: 25px;
+    font-size: 1.5em;
+    color: rgb(68, 68, 68);
+}
+
+.breakLine {
+    min-width: 90%;
+    height: 2px;
+    background: linear-gradient(to right,
+            rgb(221, 221, 221) 43%,
+            transparent 43%,
+            transparent 57%,
+            rgb(221, 221, 221) 57%);
+}
+
+.icons {
     display: flex;
     align-items: center;
-    justify-content: center;
+    margin: 2em;
 }
-.op1{
-    background-color: red; 
+
+.icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1.1em;
 }
-.op2{
-    background-color: blue;
+
+.image {
+    height: 10vh;
+    width: auto;
 }
-.op3{
-    background-color: green;
+
+@media (max-width: 650px) {
+    .container {
+        flex-direction: column;
+        width: 320px;
+    }
+
+    .boxForm {
+        order: 2;
+        min-width: 310px;
+    }
 }
