--- a/src/styles/usernew.module.css
+++ b/src/styles/usernew.module.css
@@ -1,91 +1,280 @@
-.outer{
-    background-color: black;
-    min-height: 100vh;
-    padding: 10vh;
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: black;
+  font-family: "Ubuntu";
 }
-form {
-    display:block;
-    width:450px;
-    height:auto;
-    margin:auto;
-    padding:25px;
-    padding-left:35px;
-    padding-right:35px;
-    border-radius:15px;
-    background-color:rgb(84, 84, 84);
-    font-size:16px;
-    font-family:'Arial';
-    color:rgb(255, 255, 255)
+
+body,
+.container,
+.socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  width: 100%;
+  background: rgb(204, 204, 255);
+}
+
+.container {
+  width: 640px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: rgb(34, 34, 34);
+}
+
+/* box's*/
+.rightCol {
+  min-width: fit-content;
+  padding: 20px 15px;
+  border-radius: 10px;
+  background-color: rgb(238, 238, 255);
+  flex-direction: column;
+  max-height: 80vh;
+}
+.boxForm {
+  min-width: fit-content;
+  padding: 20px 15px;
+  border-radius: 10px;
+  background-color: rgb(238, 238, 255);
+  flex-direction: column;
+  overflow-y: scroll;
+  max-height: 60vh;
+}
+
+.heading {
+  padding: 25px;
+  font-size: 1.3em;
+  color: rgb(68, 68, 68);
+}
+
+.boxInputs {
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.pw {
+  margin-top: 1.2em;
+  /* margin-left: 0; */
+}
+
+.reg {
+  margin-top: 1em;
+  /* align-self: flex-start; */
+}
+
+.reg a {
+  /* color: blue; */
+  font-family: "Ubuntu";
+}
+
+/*inputs*/
+
+.inputsEmail,
+.inputsPassword {
+  /* position: relative; */
+  min-width: 100%;
+  height: 40px;
+}
+
+.inputsEmail {
+  margin-bottom: 25px;
+}
+
+.inputsRemember {
+  margin: 15px 0 15px 0;
+}
+
+.input {
+  /* appearance: none; */
+
+  min-width: 100%;
+  height: 100%;
+
+  /* border: none; */
+  border-bottom: 2px solid rgb(68, 68, 68);
+  background-color: transparent;
+}
+
+#email {
+  padding-left: 55px;
+  transition: 0.5s padding;
+}
+
+#password {
+  padding-left: 80px;
+  transition: 0.5s padding;
+}
+
+
+#remember {
+  accent-color: rgb(34, 34, 34);
+}
+
+.input:hover {
+  border-bottom: 2px solid black;
+}
+
+.input::placeholder {
+  font-size: 1.2em;
+  color: black;
+
+}
+
+
+.labelInputs {
+  position: absolute;
+  top: 9px;
+  left: 0px;
+
+  cursor: text;
+
+  transition: 0.5s top;
+}
+
+/* .input:focus+.labelInputs {
+    top: -15px;
+} */
+
+/*button*/
+
+.boxLogin {
+  /* position: relative; */
+  min-width: 100%;
+  height: 40px;
+  margin-bottom: 15px;
+  padding: 2px;
+  border-radius: 100px;
+  background-color: rgb(34, 34, 34);
+  overflow: hidden;
+}
+
+.boxLogin:hover {
+  background-color: whitesmoke;
+}
+
+.btnLogin {
+  /* appearance: none;
+    position: relative; */
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: rgb(34, 34, 34);
+  font-size: 1em;
+  color: rgb(238, 238, 255);
+  cursor: pointer;
+  /* transition: 0.3s; */
+}
+
+/* register*/
+
+.newAcc {
+  min-width: 100%;
+  line-height: 1.2;
+  color: rgb(68, 68, 68);
+}
+
+.newAcc a {
+  color: black;
+}
+
+.newAcc a:hover {
+  color: rgb(68, 68, 68);
+}
+
+.breakLine {
+  /* position: relative; */
+  min-width: 90%;
+  height: 2px;
+  /* margin-top: 30px; */
+  background: linear-gradient(to right,
+      rgb(107, 107, 107) 45%,
+      transparent 45%,
+      transparent 55%,
+      rgb(107, 107, 107) 55%);
+}
+
+
+
+/* 
+p::selection,
+a::selection,
+label::selection,
+h1::selection,
+h2::selection {
+    background-color: rgb(34, 34, 34);
+    color: rgb(238, 238, 255); */
+/* } */
+
+/*socials*/
+
+.socials {
+  width: 100%;
+  gap: 20px;
+
+  padding: 30px 0 25px;
+}
+
+.social {
+  width: 40px;
+  height: 40px;
+
+  font-size: 30px;
+
+  /* display: grid; */
+  /* place-content: center; */
+
+  /* transition: 0.5s; */
+}
+
+.linksocials {
+  text-decoration: none;
+
+  display: block;
+
+  width: 100%;
+  height: 100%;
+
+  color: rgb(238, 238, 255);
+}
+
+
+.social:hover {
+  transform: scale(1.1);
+}
+
+
+.welcomeOuter {
+  width: 100%;
+  min-width: 150px;
+  padding-left: 20px;
+  color: rgb(238, 238, 255);
+}
+
+@media (max-width: 650px) {
+  .container {
+    flex-direction: column;
+    width: 320px;
   }
-  .lbl{
-      font-size: 1.23em;
+
+  .welcomeOuter {
+    padding: 3px 10px 10px;
+    order: 1;
   }
-  table {
-    margin:0 auto;
+
+  .boxForm {
+    order: 2;
+    min-width: 310px;
   }
-  
-  table td {
-    vertical-align: top;
-  }
-  
-  table td.lbl {
-    padding-top:12px;
-  }
-  
-  .heading{
-      color: rgb(116, 150, 228);
-      font-size: 2em;
-      margin: auto;
-      font-weight: bold;
-      text-align: center;
-      margin-bottom: 6vh;
-  }
-  
-  .textbox {
-    width:200px;
-    height:auto;
-    margin-left:10px;
-    padding:10px;
-    border:none;
-    border-radius:10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    background-color:rgb(190, 190, 190);
-    font-size:1.23em;
-    color:rgb(63, 63, 63);
-    outline: none;
-  }
-  
-  .errtextbox {
-    box-shadow: 0 0 10px rgb(255,0,0);
-  }
-  
-  .help {
-    width:190px;
-    display:block;
-    margin-bottom:30px;
-    padding-left:25px;
-    font-size:12px;
-    color:rgb(140, 140, 140);
-  }
-  
-  #info {
-    height:100px;
-    resize:none;
-  }
-  
-  .register {
-    display:block;
-    /* margin:0 auto 10px; */
-    padding:7px;
-    border:none;
-    border-radius:10px;
-    background-color:rgba(116, 150, 228, 0.394);
-    font-size:16px;
-    color:rgb(255, 255, 255);
-    margin: auto;
-    padding: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-    font-size: 1.5em;
-    cursor: pointer;
-  }
+}
+
+.welcome {
+  color: white;
+}
