Hooks added to otp page

--- a/src/styles/otpVerif.module.css
+++ b/src/styles/otpVerif.module.css
@@ -57,3 +57,9 @@ body {
     padding: 2vw;
     width:30vw
 }
+.form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
