--- a/src/styles/stafflogin.module.css
+++ b/src/styles/stafflogin.module.css
@@ -8,7 +8,7 @@
     font-family: "Ubuntu";
 }
 
-body,
+
 .container,
 .boxForm,
 .socials {
@@ -17,10 +17,13 @@ body,
     align-items: center;
 }
 
-body {
-    width: 100%;
-    height: 100vh;
+.outer {
+    min-width: 100vw;
+    min-height: 100vh;
     background: rgb(204, 204, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
