--- a/src/styles/dashboard/addWorker.module.css
+++ b/src/styles/dashboard/addWorker.module.css
@@ -1,33 +1,40 @@
 .addW{
-    margin: 3vh;
+    /* margin: 3vh; */
 }
 *{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 .title{
-    margin: 3vh;
+    /* margin: 3vh; */
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.7em;
 }
 .manage{
     background-color: rgb(248, 241, 241);
-    margin:5vh;
+    /* margin:5vh; */
     font-size:1.5em;
     border: 0.3vh solid black;
     border-radius: 1vh;
     width:100%;
 }
+.tablecontent,.status{
+  font-size: 1.22em;
+  font-weight: bolder;
+}
+.status{
+    color:rgb(47,255,75);
+}
 .manageTitle{
-    margin: 3vh;
+    /* margin: 3vh; */
 }
 
   .outer {
     font-family: 'Poppins', 'Verdana', sans-serif;
-    /* display: flex;
-    align-items: center; */
+    display: flex;
+    /* justify-content: center; */
     padding: 1.25em;
-    /* min-height: 100vh; */
+    height:90vh;
     color: #444;
     /* min-width: 100vw; */
     flex-direction: column;
@@ -39,7 +46,7 @@
     border-spacing: 0;
     border-radius: 1em;
     overflow: hidden;
-    margin: 3vh;
+    /* margin: 3vh; */
   }
   
   thead {
@@ -94,7 +101,7 @@
   }
   
   td:nth-child(n+2):nth-child(odd) {
-    background-color: #ddd;
+    background-color: rgba(221, 221, 221, 0.564);
   }
   
   
@@ -125,7 +132,7 @@
     }
     
     tr:nth-child(even) {
-    background-color: #ddd;
+    background-color: rgba(221, 221, 221, 0.857);
   }
     
     td {
