--- a/src/styles/dashboard/selectslot.module.css
+++ b/src/styles/dashboard/selectslot.module.css
@@ -1,11 +1,11 @@
-.title{
+/* .title{
     margin: 5vh;
     font-weight: bolder;
     font-size: xx-large;
-}
-.slotform{
+} */
+/* .slotform{
     margin: 5vh;
-}
+} */
 
 .outer {
     display: flex;
@@ -26,3 +26,118 @@
 .servicelist{
     width: 15vw;
 }
+table {
+    width: 90%;
+    /* margin-left: 0; */
+    border-spacing: 0;
+    border-radius: 1em;
+    overflow: hidden;
+    margin: 3vh;
+  }
+  
+  thead {
+   visibility: hidden;
+   position: absolute;
+   width: 0;
+   height: 0;
+  }
+  
+  th {
+    background: #215A8E;
+    color: #fff;
+  }
+  
+  td:nth-child(1) {
+    background: #215A8E;
+    color: #fff;
+    border-radius: 1em 1em 0 0;
+  }
+  
+  th, td {
+    padding: 1em;
+  }
+  
+  tr, td {
+    display: block;
+  }
+  
+  td {
+    position: relative;
+  }
+  
+  td::before {
+    content: attr(data-label);
+    position: absolute;
+    left: 0;
+    padding-left: 1em;
+    font-weight: 600;
+    font-size: .8em;
+    text-transform: uppercase;
+  }
+  
+  tr {
+    margin-bottom: 1.5em;
+    border: 1px solid #ddd;
+    border-radius: 1em;
+    text-align: right;
+  }
+  
+  tr:last-of-type {
+    margin-bottom: 0;
+  }
+  
+  td:nth-child(n+2):nth-child(odd) {
+    background-color: #ddd;
+  }
+  
+  
+  @media only screen and (min-width: 768px) {
+    
+    table {
+      max-width: 1200px;
+      margin: 0 auto;
+      border: 1px solid #ddd;
+    }
+    
+    thead {
+      visibility: visible;
+      position: relative;
+    }
+    
+    th {
+      text-align: left;
+      text-transform: uppercase;
+      font-size: .9em;
+    }
+    
+    tr {
+      display: table-row;
+      border: none;
+      border-radius: 0;
+      text-align: left;
+    }
+    
+    tr:nth-child(even) {
+    background-color: #ddd;
+  }
+    
+    td {
+      display: table-cell;
+    }
+    
+    td::before {
+      content: none;
+    }
+    
+    td:nth-child(1) {
+      background: transparent;
+      color: #444;
+      border-radius: 0;
+    }
+    
+    td:nth-child(n+2):nth-child(odd) {
+      background-color: transparent;
+    }
+    
+    
+  }
