--- a/src/styles/dashboard/admin.module.css
+++ b/src/styles/dashboard/admin.module.css
@@ -13,7 +13,7 @@
 .content{
     display: flex;
     height: 90vh;
-    background-color:rgb(252, 236, 212);
+    /* background-color:rgb(252, 236, 212); */
 
 }
 .logout{
