--- a/src/styles/dashboard/selectslot.module.css
+++ b/src/styles/dashboard/selectslot.module.css
@@ -7,137 +7,152 @@
     margin: 5vh;
 } */
 
-.outer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: 100%;
+.outer1, .outer2, .outer3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 100%;
 }
-.toprow{
-    display: flex;
-    justify-content: space-between;
+
+.toprow {
+  margin: 2vh;
+  display: flex;
+  justify-content: center;
+  /* justify-content: space-between; */
 }
-.save{
-    margin-right: 0;
-    margin-left: auto;
-    /* justify-self: flex-end; */
+
+.headings {
+  /* margin-left: 30vw; */
+  display: flex;
+  width: 15vw;
+  justify-content: space-between;
 }
-.servicelist{
-    width: 15vw;
+.frwrdbtn, .backbtn {
+  display: flex;
+  align-items: center;
 }
+
+.savebtn {
+
+}
+
+.servicelist {
+  width: 15vw;
+}
+
 table {
-    width: 90%;
-    /* margin-left: 0; */
-    border-spacing: 0;
-    border-radius: 1em;
-    overflow: hidden;
-    margin: 3vh;
+  width: 90%;
+  /* margin-left: 0; */
+  border-spacing: 0;
+  border-radius: 1em;
+  overflow: hidden;
+  margin: 3vh;
+}
+
+thead {
+  visibility: hidden;
+  position: absolute;
+  width: 0;
+  height: 0;
+}
+
+th {
+  background: #215A8E;
+  color: #fff;
+}
+
+td:nth-child(1) {
+  background: #215A8E;
+  color: #fff;
+  border-radius: 1em 1em 0 0;
+}
+
+th, td {
+  padding: 1em;
+}
+
+tr, td {
+  display: block;
+}
+
+td {
+  position: relative;
+}
+
+td::before {
+  content: attr(data-label);
+  position: absolute;
+  left: 0;
+  padding-left: 1em;
+  font-weight: 600;
+  font-size: .8em;
+  text-transform: uppercase;
+}
+
+tr {
+  margin-bottom: 1.5em;
+  border: 1px solid #ddd;
+  border-radius: 1em;
+  text-align: right;
+}
+
+tr:last-of-type {
+  margin-bottom: 0;
+}
+
+td:nth-child(n+2):nth-child(odd) {
+  background-color: #ddd;
+}
+
+
+@media only screen and (min-width: 768px) {
+
+  table {
+    max-width: 1200px;
+    margin: 0 auto;
+    border: 1px solid #ddd;
   }
-  
+
   thead {
-   visibility: hidden;
-   position: absolute;
-   width: 0;
-   height: 0;
-  }
-  
-  th {
-    background: #215A8E;
-    color: #fff;
-  }
-  
-  td:nth-child(1) {
-    background: #215A8E;
-    color: #fff;
-    border-radius: 1em 1em 0 0;
-  }
-  
-  th, td {
-    padding: 1em;
-  }
-  
-  tr, td {
-    display: block;
-  }
-  
-  td {
+    visibility: visible;
     position: relative;
   }
-  
-  td::before {
-    content: attr(data-label);
-    position: absolute;
-    left: 0;
-    padding-left: 1em;
-    font-weight: 600;
-    font-size: .8em;
+
+  th {
+    text-align: left;
     text-transform: uppercase;
+    font-size: .9em;
   }
-  
+
   tr {
-    margin-bottom: 1.5em;
-    border: 1px solid #ddd;
-    border-radius: 1em;
-    text-align: right;
+    display: table-row;
+    border: none;
+    border-radius: 0;
+    text-align: left;
   }
-  
-  tr:last-of-type {
-    margin-bottom: 0;
+
+  tr:nth-child(even) {
+    background-color: #ddd;
   }
-  
+
+  td {
+    display: table-cell;
+  }
+
+  td::before {
+    content: none;
+  }
+
+  td:nth-child(1) {
+    background: transparent;
+    color: #444;
+    border-radius: 0;
+  }
+
   td:nth-child(n+2):nth-child(odd) {
-    background-color: #ddd;
+    background-color: transparent;
   }
-  
-  
-  @media only screen and (min-width: 768px) {
-    
-    table {
-      max-width: 1200px;
-      margin: 0 auto;
-      border: 1px solid #ddd;
-    }
-    
-    thead {
-      visibility: visible;
-      position: relative;
-    }
-    
-    th {
-      text-align: left;
-      text-transform: uppercase;
-      font-size: .9em;
-    }
-    
-    tr {
-      display: table-row;
-      border: none;
-      border-radius: 0;
-      text-align: left;
-    }
-    
-    tr:nth-child(even) {
-    background-color: #ddd;
-  }
-    
-    td {
-      display: table-cell;
-    }
-    
-    td::before {
-      content: none;
-    }
-    
-    td:nth-child(1) {
-      background: transparent;
-      color: #444;
-      border-radius: 0;
-    }
-    
-    td:nth-child(n+2):nth-child(odd) {
-      background-color: transparent;
-    }
-    
-    
-  }
+
+
+}
