--- a/src/styles/dashboard/mybooking.module.css
+++ b/src/styles/dashboard/mybooking.module.css
@@ -50,7 +50,7 @@ table {
     position: relative;
     font-size: 1.5em;
     font-weight: bolder;
-  } */
+  } 
   
   td::before {
     content: attr(data-label);
