--- a/src/styles/dashboard/bookslot.module.css
+++ b/src/styles/dashboard/bookslot.module.css
@@ -108,7 +108,7 @@
     display: none;
 }
 
-.cardinput {
+.cardinput,.cardinput3,.cardinput33 {
     margin-left: 10px;
     margin-right: 10px;
     /* padding: 00px; */
@@ -145,20 +145,22 @@
 .outer3{
     /* display: flex; */
     /* flex-direction: row; */
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     background-color: rgb(245,245,245);
 }
 .out{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 .revertbtn2{
     margin-left: 2vw;
 }
 .addon{
-    margin-right: 32vw;
+    white-space: nowrap;
+    /* margin-top: vh; */
+    /* margin-right: 32vw; */
     font-size:2.5em;
     font-weight: bolder;
 }
@@ -170,6 +172,10 @@
     width: 30vw;
     padding: 1.5vw;
     background-color: white;
+
+}
+.leftable{
+    /* padding: 1.5vw; */
 }
 .confirm{
     font-size: 2em;
@@ -179,14 +185,86 @@
     align-items: center;
 }
 .intable{
+    border: none;
+    width: 100%;
+    background: white;
+    display: flex;
+    border-radius: 0;
+    flex-direction: row;
+}
+.inrow,.inrow1{
+    /* width:100%; */
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+}
+.inrow{
+    /* margin-bottom: 5vh; */
+}
+.incol1{
+    margin-left: 11vw;
+}
+.incol,.incol1{
+    /* width: 50%; */
+    flex: 1;
+    padding: 0;
+    white-space: nowrap;
+}
+.cardinput33{
+    height:5vh;
+    max-width: 6vw;
+}
+.inrow{
+    /* margin-bottom: 9vh; */
+}
+.inrow1{
+    /* margin-bottom: 10vh; */
+    /* margin-top: 5vh; */
+}
+.inrow,.incol,.incol1,.inrow1{
+    background: white;
+    color:black;
+}
+.incol{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1vh;
+    font-weight: bolder;
+    font-size: 1.4em;
+    margin-left: 2vw;
+}
+/* .inrow{
+    display: flex;
+} */
+.incol1{
+    /* position:relative;
+    right:5vw; */
+}
+.rowdiv{
+    background-color: white;
+    
+}
+.intable,.inleft{
     display: flex;
 }
+.inleft{
+    justify-content: space-between;
+}
+.inleftable{
+    padding: 2vh;
+}
 .leftable{
-    width: 40vw;
+    /* width: 30vw; */
     padding: 1.5vw;
     background-color: white;
-    margin: 2vw;
+    margin-right: 2vw;
 }
+/* .leftH,.rightH{
+    font-weight: bolder;
+    font-size: 1.5em;
+    margin-top: 2vh;
+}  */
 .summary{
     font-size:2.2em;
     font-weight: bolder;
@@ -197,12 +275,15 @@
     display: flex;
     justify-content: space-between;
 }
-.breakLine {
+.breakLine,.breakLin {
     /* position: relative; */
     min-width: 90%;
     height: 2px;
     margin-top: 30px;
     background: rgb(221,221,221);
+}
+.breakLin{
+    margin-bottom: 2vh;
 }
 .rowL,.rowR{
     color:rgba(110, 110, 110, 0.835);
@@ -229,4 +310,42 @@
 .pay{
     color: white;
     font-weight: bolder;
+}
+.wname3{
+    font-size: 1.5em;
+}
+.cardinput3,.cardinput33{
+    margin: none;
+    justify-content: center;
+    align-items: center;
+    min-width: fit-content;
+}
+.avail{
+    font-size: 1.6em;
+    font-weight: bolder;
+    margin-bottom: 2vh;
+}
+.parkinfo,.park{
+    font-weight: bolder;
+    font-size: 1.2em;
+    margin-bottom: 2vh;
+}
+.divv{
+    display: flex;
+    justify-content: space-around;
+}
+.out{
+    margin-top: 2vh;
+    display: flex;
+    width:80vh;
+    justify-content: center;
+}
+.revpos{
+    margin-top: 3vh;
+    display: flex;
+    justify-content: flex-start;
+}
+.revbtn{
+    position: relative;
+    right:70vh
 }
