--- a/src/styles/userlogin.module.css
+++ b/src/styles/userlogin.module.css
@@ -180,7 +180,16 @@
 .newAcc a:hover {
     color: rgb(68, 68, 68);
 }
-
+.breakLin{
+    min-width: 90%;
+    height: 2px;
+    /* margin-top: 30px; */
+    background: linear-gradient(to right,
+            rgb(221, 221, 221) 43%,
+            transparent 43%,
+            transparent 57%,
+            rgb(221, 221, 221) 57%);
+}
 .breakLine {
     /* position: relative; */
     min-width: 90%;
@@ -211,7 +220,7 @@ h2::selection {
     width: 100%;
     gap: 20px;
 
-    padding: 30px 0 25px;
+    padding: 20px 0 1px;
 }
 
 .social {
