--- a/src/styles/usernew.module.css
+++ b/src/styles/usernew.module.css
@@ -49,8 +49,29 @@
   flex-direction: column;
   overflow-y: scroll;
   max-height: 60vh;
+  margin-top: 2vh;
 }
 
+.boxForm::-webkit-scrollbar{
+  width: 10px;
+}
+.boxForm::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color: #F5F5F5;
+}
+
+.boxForm::-webkit-scrollbar
+{
+width: 10px;
+background-color: #F5F5F5;
+}
+
+.boxForm::-webkit-scrollbar-thumb
+{
+background-color: #000000;
+border: 2px solid #555555;
+}
 .heading {
   padding: 25px;
   font-size: 1.3em;
@@ -63,9 +84,11 @@
   flex-direction: column;
 }
 
-
+.pw1{
+  margin-top: -1vh;
+}
 .pw {
-  margin-top: 1.2em;
+  margin-top: 1em;
   /* margin-left: 0; */
 }
 
