--- a/src/styles/usernew.module.css
+++ b/src/styles/usernew.module.css
@@ -12,7 +12,7 @@
 .container,
 .socials {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -24,14 +24,27 @@
   justify-content: center;
   align-items: center;
 }
-
+.submit{
+  margin-top: 1vh;
+}
 .container {
   width: 640px;
   padding: 10px;
   border-radius: 20px;
   background-color: rgb(34, 34, 34);
 }
+.welcomeOuter{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 
+.mar{
+  position: relative;
+  top: 20vh;
+  margin-bottom: 40vh;
+  justify-self: center;
+}
 /* box's*/
 .rightCol {
   min-width: fit-content;
@@ -42,6 +55,7 @@
   max-height: 80vh;
 }
 .boxForm {
+  margin-top:1vh;
   min-width: fit-content;
   padding: 20px 15px;
   border-radius: 10px;
@@ -49,12 +63,20 @@
   flex-direction: column;
   overflow-y: scroll;
   max-height: 60vh;
-  margin-top: 2vh;
+  /* margin-top: 2vh; */
+}
+.regnew{
+  color:white;
+  /* text-decoration: none; */
+  font-size: 1.1em;
+  font-weight: bolder;
+  
 }
 
 .boxForm::-webkit-scrollbar{
   width: 10px;
 }
+
 .boxForm::-webkit-scrollbar-track
 {
 -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -88,7 +110,7 @@ border: 2px solid #555555;
   margin-top: -1vh;
 }
 .pw {
-  margin-top: 1em;
+  margin-bottom: 1em;
   /* margin-left: 0; */
 }
 
@@ -302,6 +324,6 @@ h2::selection {
   }
 }
 
-.welcome {
+.welcome ,.welcome1{
   color: white;
 }
